# neowaita

./: .buildconfig  COPYING  Makefile  meson.build  org.igorgue.NeoWaita.json  python3-pynvim.json  vte-gtk4.json
data/: meson.build  org.igorgue.NeoWaita.appdata.xml.in  org.igorgue.NeoWaita.desktop.in  org.igorgue.NeoWaita.gschema.xml  org.igorgue.NvimPythonUI.appdata.xml.in  org.igorgue.NvimPythonUI.desktop.in  org.igorgue.NvimPythonUI.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  neowaita.gresource.xml  neowaita.in  nvim-python-ui.in  nvim_python_ui.gresource.xml  utils.py  window.py  window.ui
src/resources/: style.css
